tests/baselines/reference/typeAliasDeclarationEmit.errors.txt
tests/cases/compiler/typeAliasDeclarationEmit.ts(4,37): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/typeAliasDeclarationEmit.ts (1 errors) ====
    
    export type callback<T> = () => T;
    
    export type CallbackArray<T extends callback> = () => T;
                                        ~~~~~~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.